热门页面完成，子页面RankFragment有待完善

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="text_hot">热门</string>
     <string name="text_search">发现</string>
     <string name="text_home">首页</string>
+    <string name="text_find">发现</string>
 </resources>
