--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="text_search">发现</string>
     <string name="text_home">首页</string>
     <string name="text_find">发现</string>
+    <string name="text_test">测试</string>
 </resources>
