发现页面完成，发现详情页面需要完善

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="text_already_catch">该视频已经缓存过了</string>
     <string name="text_start_download">开始下载</string>
     <string name="text_add_task_failed">添加任务失败</string>
+    <string name="text_default">默认数据</string>
 </resources>
